# zeta_path_tracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aabb.cpp  aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  collection_hittables.cpp  collection_hittables.h  collection_lights.cpp  collection_lights.h  collection_materials.cpp  collection_materials.h  collection_textures.h  color.cpp  color.h  hit_record.cpp  hit_record.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  image.ppm  light.h  main.cpp  material.cpp  material.h  path_tracer.cpp  path_tracer.h  pather  progress_bar.h  test.cpp  texture.h  todo.td  vec3d.cpp  vec3d.h
models/: bobs.blend  bobs.blend1  bobs.mtl  kit.blend  ship.blend  tank.blend  tank.mtl
src/: 0_1943.rt  0_6572.rt  0_8396.rt  0_9155.rt  1.rt  1_1943.rt  1_5286.rt  1_6572.rt  1_9155.rt  2_1854.rt  2_1943.rt  2_6572.rt  2_9155.rt  3_1943.rt  3_6105.rt  3_6572.rt  3_9155.rt  4_9155.rt  5_9155.rt  6_9155.rt  7_9155.rt  Makefile  PathTracer.hpp  aabb.h  camera.cpp  collection_hittables.cpp  collection_hittables.h  collection_instances.cpp  collection_instances.h  collection_lights.h  collection_materials.cpp  collection_materials.h  collection_textures.cpp  collection_textures.h  color.cpp  color.h  hit_record.h  image.ppm  light.h  main.cpp  (+14 more)
src/acceleration_structures/: bvh.cpp  bvh.h
src/applications/sfml/: CMakeLists.txt  main.cpp
src/applications/sfml/interface/: interface.cpp  interface.h
src/applications/threaded_rendering/: CMakeLists.txt  main.cpp
src/cameraLightColor/: light.h  scene.h
src/cameraLightScene/: scene.h
src/camera_light_scene/: camera.cpp  camera.h  light.h  scene.h
src/collections/: Collections.h  collection_hittables.cpp  collection_hittables.h  collection_instances.cpp  collection_instances.h  collection_lights.cpp  collection_lights.h  collection_materials.cpp  collection_materials.h  collection_textures.cpp  collection_textures.h
src/collections/hittables/: Hittables.h  box.cpp  box.h  hittables.h  model.cpp  model.h  plane.h  rect_xy.cpp  rect_xy.h  rect_xz.cpp  rect_xz.h  rect_yz.cpp  rect_yz.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  utils_header.h
src/collections/instances/: Instances.h  instance.cpp  instance.h  rot_x.cpp  rot_x.h  rot_y.cpp  rot_y.h  rot_z.cpp  rot_z.h  translate.cpp  translate.h  utils_header.h
src/collections/lights/: Lights.h  diffuse.cpp  diffuse.h  utils_header.h
src/collections/materials/: Materials.h  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  marble.cpp  marble.h  metal.cpp  metal.h  utils_header.h
src/collections/noises/: Noises.h  perlin.cpp  perlin.h
src/collections/textures/: Textures.h  checkered.cpp  checkered.h  image.cpp  image.h  marble.cpp  marble.h  solid_color.cpp  solid_color.h  textures.h  utils_header.h
src/color/: color.cpp  color.h  rgba.cpp  rgba.h  texture.h
src/hits/: aabb.cpp  aabb.h  hit_record.cpp  hit_record.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h
src/image/: denoiser.cpp  denoiser.h  frame.h  image.h
src/jobber/: CMakeLists.txt  jobber.cpp  jobber.h  task.cpp  task.h
src/jobber/pipeline/: collection.h  pipeline.h  thread_local.h  worker_driven.h  worker_threaded.h
src/jobber/splitter/: collection.h  linear.h  splitter.h
src/jobber/storage/: collection.h  complexity_capped.h  queue.h  storage.h
src/jobber/task/: task.h
src/jobber/worker/: collection.h  local.h  worker.h
src/material/: material.cpp  material.h
src/models/: kit.blend1  kit.mtl  ship.mdl
src/multithreading/: mt_path_tracer.cpp  mt_path_tracer.h  semaphore.h  thread_render_task.h  threader.h
src/scenes/: cornell_box.h
src/sfml_interface/: interface.cpp  interface.h
src/tracer/: path_tracer.cpp  path_tracer.h  render_task.cpp  render_task.h
src/tracer/configs/: full.cpp  full.h  render.cpp  render.h  system.cpp  system.h  verbosity.cpp  verbosity.h
src/utils/: PathTracer.hpp  bvh.h  fast_random.hpp  logger.cpp  logger.h  matrix4.h  path_tracer.cpp  path_tracer.h  path_tracer_constants.h  progress_bar.cpp  progress_bar.h  ray.cpp  ray.h  timer.cpp  timer.h  vec3d.cpp  vec3d.h
src/utils/event_system/: signal.h  signal_reaction.h
